@@ -1,3 +1,5 @@
+* Simplify `RE_SIMPLE_SELECTOR` removing checks for buggy API. [Diego Perini, jddalton]
+
 * Make byClass(), byName(), and byTag() convert nodeLists to arrays to improve element access times. [jddalton]
 
 * Avoid critical error in select_regular() if selector contains trailing commas like `div,`. [jddalton]
